--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -150,7 +150,10 @@ html
                 td
                 td
 
-        p.text-muted
+        p.text-muted(ng-if="isTournament")
+          em Please fill out and return to SFL Ultimate staff.  Please keep accurate track of point differential and timeouts as this might prove important in determining the two teams that advance to finals.
+
+        p.text-muted(ng-if="!isTournament")
           em Please fill out and return to SFL Ultimate staff.  Stats allow us to determine awards (MVP, assist, score, defensive leaders) for each gender as well as help us resolve seeding for the playoff tournament. Thank you!
 
     script(src='/js/utils.js')
