Added field if would sponsor

--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -42,6 +42,7 @@ block content
                     th Partner
                     th Comments
                     th Would Captain?
+                    th Would Sponsor?
                     th(ng-if="user") Actions
                 tbody
                     tr(ng-repeat='player in players | orderBy:"-skill"')
@@ -57,6 +58,7 @@ block content
                         td 
                          | <small class="badge" ng-style="getBadgeStyle(player)">{{player.team ? "Rostered": "Unassigned"}}</small> {{player.comments}} 
                         td {{player.wouldCaptain ? 'Yes': ''}}
+                        td {{player.wouldSponsor ? 'Yes': ''}}
                         td(ng-if="user") 
                             button(ng-repeat="team in teams" ng-click="modifyRoster(team, player, 'add')" ng-if="!player.team").btn.btn-default Add To {{team.name}}
                             
