Added annual calendar

--- a/templates/views/events.jade
+++ b/templates/views/events.jade
@@ -7,6 +7,9 @@ block head
 
 block content
     .container
+        h1 Calendar        
+        iframe(src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS1QbLcE0hE72nw--gBLaNKwIYX3P8YZr9w8TMz2yqL62qIkXxxoRcmNXLT_whp5mg_oVfV5dwV23mh/pubhtml?widget=true&amp;headers=false", width='100%', frameBorder="0",  style='height: 980px;')
+        
         h1 Upcoming Events
         p.lead Below you will find our list upcoming events.
         for event in events
