--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -39,6 +39,7 @@ block content
                     th Shirt Size
                     th Skill
                     th Attendance
+                    th Will Attend Finals?
                     th Partner
                     th Comments
                     th Would Captain?
@@ -54,6 +55,7 @@ block content
                         td {{player.shirtSize}}
                         td {{player.skillLevel}}
                         td {{player.participation}}
+                        td {{player.willAttendFinals ? 'Yes': 'No'}}
                         td {{player.partnerName}}
                         td 
                          | <small class="badge" ng-style="getBadgeStyle(player)">{{player.team ? "Rostered": "Unassigned"}}</small> {{player.comments}} 
