Fixing braintree sdk

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -215,7 +215,7 @@ block content
             p Note that you will not get a jersey.
 
 block js
-    script(src='https://js.braintreegateway.com/v2/braintree.js')
+    script(src="https://js.braintreegateway.com/js/braintree-2.32.1.min.js")
     script.
         var clientToken = "#{braintree_token}";
     script(src='js/register-form.js')
