Adding views of captains/sponsors

--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -26,6 +26,8 @@ block content
             .btn-group
                 .btn.btn-default(ng-click="sortPlayersByRecency()") Sort By Recent
                 .btn.btn-default(ng-click="sortByGenderThenSkill()") Sort By Gender, Then Skill
+                .btn.btn-default(ng-click="showOnlyCaptains()") Show Only Captains
+                .btn.btn-default(ng-click="showOnlySponsors()") Show Only Sponsors
             //    .btn.btn-default(ng-click="filterPlayers('2020-01-11')") Jan. 11th Event
             //    .btn.btn-default(ng-click="filterPlayers('2020-02-02')") Feb. 2nd
 
