--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -12,12 +12,12 @@ block content
             h1 Beach Bash
             p Come down to sunny Ft. Lauderdale for a winter beach tourney on December 12-13th!
             p
-                a.btn.btn-primary.btn-lg Submit a Bid!
+                a.btn.btn-primary.btn-lg(target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSffQliLEhIRV28WWFQM3A0HCaQ2XcWjPiJ5a98h5jlRdU8XFQ/viewform") Submit a Bid!
 
         .row
             .col-md-4
                 h2 Frequently Asked Questions
-                p 
+                p Find here all your tourney information.
             .col-md-8
                 .panel.panel-default
                     .panel-heading
@@ -27,8 +27,8 @@ block content
                 .panel.panel-default
                     .panel-heading 
                         .panel-title How much is the bid fee?
-                    .panel-body It's $400, we use this for field permits and tournament drinks/snacks
+                    .panel-body It's <strong>$400</strong>, we use this for field permits and tournament drinks/snacks.  Plus if your team captain has played South Florida league, you'll get a $50 discount. 🎉 
                 .panel.panel-default
                     .panel-heading
-                        .panel-title What's the gender ratio?
-                    .panel-body This will be a 2:2 mixed beach tournament
+                        .panel-title What's the gender ratio?  How many players?
+                    .panel-body This will be a 2:2 mixed beach tournament, with a minimum of 4 players and a maximum of 12 players per team.
