--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -15,7 +15,20 @@ block content
                 a.btn.btn-primary.btn-lg(target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSffQliLEhIRV28WWFQM3A0HCaQ2XcWjPiJ5a98h5jlRdU8XFQ/viewform") Submit a Bid!
 
         .row
-            .col-md-4
+            .col-md-2.col-md-offset-1
+                h2 Tournament Overview
+            .col-md-8
+                h4 Time soak some sun in Florida
+                p Welcome to the Beach Bash Ultimate Tournament. Florida’s newest and highest level beach ultimate frisbee tournament.
+                p We are playing in the heart of the pristine Ft Lauderdale Beach the weekend of December 16-17, 2023. The format is 4v4 USA Ultimate rules with a 2:2 gender ratio. We will have lined fields for a guaranteed 4 games of Saturday pool play and at least 3 games of Sunday bracket play.
+                p Cost is $400 per 10 person team (~$33 per player). Up to 4 additional players can be added for $40 per player with a maximum 14 players.
+                p Showers, restrooms, bars, restaurants, and convenient stores all within walking distance of the beach!
+                p We will be having a Friday night registration party in Ft Lauderdale and a Saturday night tournament party location tbd.
+                p Come join the hottest beach ultimate community in Florida! See you in December!
+        
+        hr 
+        .row
+            .col-md-2.col-md-offset-1
                 h2 Frequently Asked Questions
                 p Find here all your tourney information.
             .col-md-8
