--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -10,7 +10,7 @@ block content
         br
         .jumbotron
             h1 Beach Bash
-            p Come down to sunny Ft. Lauderdale for a winter beach tourney on December 12-13th!
+            p Come down to sunny Ft. Lauderdale for a winter beach tourney on December 16-17th!
             p
                 a.btn.btn-primary.btn-lg(target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSffQliLEhIRV28WWFQM3A0HCaQ2XcWjPiJ5a98h5jlRdU8XFQ/viewform") Submit a Bid!
 
@@ -25,7 +25,7 @@ block content
                 p Showers, restrooms, bars, restaurants, and convenient stores all within walking distance of the beach!
                 p We will be having a Friday night registration party in Ft Lauderdale and a Saturday night tournament party location tbd.
                 p Come join the hottest beach ultimate community in Florida! See you in December!
-        
+                iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1690.3133871864395!2d-80.10470750573026!3d26.110114190972915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d90184490da219%3A0x1a08e5d36463b739!2sOcean%20Rescue%20Tower%20%231!5e1!3m2!1sen!2sus!4v1696989472039!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade")
         hr 
         .row
             .col-md-2.col-md-offset-1
