Adding opengraph image

--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -3,7 +3,8 @@ extends ../layouts/default
 block head
     meta(property="og:title"        content="South Florida Ultimate Beach Bash 2023")
     meta(property="og:url"          content="https://www.sflultimate.com/beach-bash-tournament")
-    meta(property="og:description"  content="Come down to sunny Ft. Lauderdale for a winter beach tourney on December 12-13th")
+    meta(property="og:image"        content="https://www.sflultimate.com/images/open-graph/2023-beach-bash-tournament.jpg")
+    meta(property="og:description"  content="Come down to sunny Ft. Lauderdale for our inaugural ultimate frisbee beach tourney on December 12-13th")
     style
         
 block content
