--- a/public/styles/beach-bash-tournament.scss
+++ b/public/styles/beach-bash-tournament.scss
@@ -17,3 +17,19 @@
   z-index: 1;
   padding-top: 3em;
 }
+
+
+.beach-bash-hero-container {
+  position: relative; 
+  padding-top: 3em;
+  .jumbotron {
+    background: none;
+    color: white;
+  }
+  .tagline {
+    background: #0000003b;
+    padding: 1em;
+    margin: 1em auto;
+    max-width: 700px;
+  }
+}
