--- a/public/styles/beach-bash-tournament.css
+++ b/public/styles/beach-bash-tournament.css
@@ -9,20 +9,38 @@
         left: 0;
         width: 100%; } }
 
+.site-header {
+  display: none; }
+
+.beach-bash-hero-container {
+  position: relative;
+  padding-top: 1em; }
+  .beach-bash-hero-container .jumbotron {
+    background: none;
+    color: white; }
+  .beach-bash-hero-container img {
+    max-width: 80%; }
+  .beach-bash-hero-container .tagline {
+    background: rgba(0, 0, 0, 0.44);
+    padding: 1em;
+    margin: 1em auto;
+    max-width: 700px;
+    font-size: 1.25em; }
+
 .beach-bash-content-container {
   background: white;
   position: relative;
   z-index: 1;
   padding-top: 3em; }
 
-.beach-bash-hero-container {
-  position: relative;
-  padding-top: 3em; }
-  .beach-bash-hero-container .jumbotron {
-    background: none;
-    color: white; }
-  .beach-bash-hero-container .tagline {
-    background: #0000003b;
-    padding: 1em;
-    margin: 1em auto;
-    max-width: 700px; }
+.btn-primary, .credits {
+  background-color: #90c4cf;
+  border-color: #1c515d; }
+
+.site-footer a {
+  color: #1c515d; }
+
+.site-footer .fa {
+  background-color: #90c4cf; }
+
+/*# sourceMappingURL=beach-bash-tournament.css.map */
