--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -40,7 +40,7 @@ block content
     
             h3 Registration
     
-            form#registration(method="post" action="register" autocomplete="off")
+            form#registration(method="post" autocomplete="off")
     
                 .row
                     .col-md-6
